2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkstandalone.in: Fix modules directory.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (image_targets): Set default_compression to lzma
	on i386-pc target.
	(argp_parser): Accept "auto" as compression specification.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix `help' with unloaded modules.

	* include/grub/normal.h (grub_dyncmd_get_cmd): New proto.
	* grub-core/normal/dyncmd.c (grub_dyncmd_get_cmd): New function.
	(grub_dyncmd_dispatcher): Small stylistic fix.
	* grub-core/commands/help.c (grub_cmd_help): Load missing modules when
	explicit help is requested.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/cpio.c (grub_cpio_dir): Fix a bug with multiple listing.
	Explicitly init restart while on it.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/posix_wrap/wchar.h (mbrtowc): Set pwc to zero to avoid
	uninited variable.

2012-02-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mknetdir.in: Use . rather than source for POSIX
	compatibility.

2012-02-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-probe.c (main): Fix trailing space in compatibility hint.

2012-02-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/partition.c (grub_partition_get_name): Fix uninited
	variable.

2012-02-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/hdparm.c (grub_cmd_hdparm): Accept device name
	without quotes.

2012-02-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/net.c (GRUB_MOD_INIT): Don't register netfs.

2012-02-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/partition.c (grub_partition_get_name): Fix reverse
	iteration of partitions.

2012-02-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Improve gettext support. Stylistic fixes and error handling fixes while
	on it.

2012-02-07  Vladimir Serbinenko  <phcoder@gmail.com>
